app/styles/styles.css
@charset "utf-8";
/* ====================== Accessibilty ====================== */
/* Hidden on screen but not to screen readers */
.visuallyHidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.visuallyHidden.show, .visuallyHidden.focusable:active, .visuallyHidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/* CSS Document */

body,td,th,p{
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
	line-height: 1.5;
}
body {
	background-color: #fdfdfd;
	margin: 0;
	position:relative;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}
ul, li {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
}
a {
	color: orange;
	text-decoration: none;
}
a:hover, a:focus {
	color: #3397db;
	text-decoration: none;
}
a img{
	border: none 0px #fff;
}
h1, h2, h3, h4, h5, h6 {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0 0 20px;
}
article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
	display: block;
}
#header{
  grid-column: span 12;
}
#maincontent {
  background-color: #f3f3f3;
  grid-column: span 12;
  display: flex;
  flex-flow: column;
}
#footer {
  background-color: #444;
  color: #aaa;
  font-size: 8pt;
  letter-spacing: 1px;
  padding: 25px;
  text-align: center;
  text-transform: uppercase;
  grid-column: span 12;
}
/* ====================== Navigation ====================== */
nav {
  width: 100%;
  height: 80px;
  background-color: #252831;
  text-align:center;
  display: flex;
}
nav h1 {
  margin: auto;
}
nav h1 a {
  color: #fff;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}
#breadcrumb {
    padding: 10px 40px 16px;
    list-style: none;
    background-color: #eee;
    font-size: 17px;
    margin: 0;
}

/* Display list items side by side */
#breadcrumb li {
    display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
#breadcrumb li+li:before {
    padding: 8px;
    color: black;
    content: "/\00a0";
}

/* Add a color to all links inside the list */
#breadcrumb li a {
    color: #0275d8;
    text-decoration: none;
}

/* Add a color on mouse-over */
#breadcrumb li a:hover {
    color: #01447e;
    text-decoration: underline;
}
/* ====================== Map ====================== */
#map {
  height: 25rem;
  height: 50vh;
  width: 100%;
  background-color: #ccc;
}
/* ====================== Restaurant Filtering ====================== */
.filter-options {
  width: 100%;
  background-color: #3397DB;
  align-items: center;
  display: flex;
  flex-wrap: wrap;
}
.filter-options h2 {
  color: white;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1;
  margin: 10px 20px;
  width:100%;
}
.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: Arial,sans-serif;
  font-size: 11pt;
  height: 35px;
  letter-spacing: 0;
  margin: 10px;
  padding: 0 10px;
}

/* ====================== Restaurant Listing ====================== */
#restaurants-list {
  background-color: #f3f3f3;
  list-style: outside none none;
  margin: 0;
  padding: 5px 5px 10px;
  text-align: center;
  max-width: 85em;
  margin: 0 auto;

}
#restaurants-list li {
  background-color: #fff;
  border: 2px solid #ccc;
  font-family: Arial,sans-serif;
  margin: 15px;
  padding: 5px 10px 10px;
  text-align: left;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  align-items: center;
}
#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  width: 100%;
}
#restaurants-list .restaurant-info {
  display: flex;
  flex-flow: column;
  text-align: center;
  align-items: center;
  padding: 10px 20px;
}
#restaurants-list li h1 {
  color: #f18200;
  font-family: Arial,sans-serif;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase;
}
#restaurants-list p {
  margin: 0;
  font-size: 11pt;
}
#restaurants-list li a {
  background-color: orange;
  border-bottom: 3px solid #eee;
  color: #fff;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

/* ====================== Restaurant Details ====================== */
.inside header {
  width: 100%;
}
.inside #map-container {
  background: blue none repeat scroll 0 0;
  width: 100%;
}

.inside #maincontent > * {
  box-sizing: border-box;
}

.inside #map {
  background-color: #ccc;
}
.inside #footer {

}
#restaurant-name {
  color: #f18200;
  font-family: Arial,sans-serif;
  font-size: 20pt;
  font-weight: 200;
  letter-spacing: 0;
  margin: 15px 0 30px;
  text-transform: uppercase;
  line-height: 1.1;
}
#restaurant-img {
	width: 80%;
}
#restaurant-address {
  font-size: 12pt;
  margin: 10px 0px;
}
#restaurant-cuisine {
  background-color: #333;
  color: #ddd;
  font-size: 12pt;
  font-weight: 300;
  letter-spacing: 10px;
  margin: 0 0 20px;
  padding: 2px 0;
  text-align: center;
  text-transform: uppercase;
}
#restaurant-container, #reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
  padding: 10px 15px 15px;
  text-align: center;
  width: 100%;
}
#reviews-container h2 {
  color: #f58500;
  font-size: 24pt;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt;
}
#reviews-list {
  margin: 0;
  padding: 0;
}
#reviews-list li {
  background-color: #fff;
    border: 2px solid #f3f3f3;
  display: block;
  list-style-type: none;
  margin: 0 0 5px;
  padding: 10px 20px 10px;
}
#reviews-list li p {
  margin: 0 0 10px;
}
#restaurant-hours{
  width: 100%;
}
#accordion {
  background-color: #ddd;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
  transition: 0.4s;
  display: block;
  box-sizing: border-box;
}
.active, #accordion:hover {
  background-color: #ccc;
}

#restaurant-hours td {
  color: #666;
}

/* Media Queries Breakpoints */
/* Small only */
@media screen and (max-width: 39.9375em) {

}

/* Medium and up */
@media screen and (min-width: 40em) {
  /* ====================== Map ====================== */
  #map {
    height: 25rem;
    height: 40vh;
  }
  /* ====================== Restaurant Filtering ====================== */
  .filter-options h2 {
    width: auto;
  }

  /* ====================== Restaurant Listing ====================== */
  #restaurants-list {
    padding: 10px 10px 10px;
  }

  #restaurants-list li {
    padding: 15px 25px;
  }

  #restaurants-list .restaurant-info {
    flex: 1;
  }
  .restaurant-info .location-info {
    margin: 5px 0 10px;
  }
  #restaurants-list .restaurant-info h3,
  #restaurants-list .restaurant-info p {
    font-size: 1.3em;
  }

  #restaurants-list .restaurant-img {
    width: 35%;
    flex: 0 1 35%;
  }
/* ====================== Header ====================== */
  #breadcrumb li {
    font-size: 1em;
  }
/* ====================== Restaurant Details ====================== */

  #restaurant-cuisine,
  #restaurant-address,
  #accordion {
    font-size: 1.4em;
  }

  #restaurant-hours td {
    font-size: 1.3em;
  }

/* ====================== Restaurant Reviews ====================== */

  #reviews-list li p {
    font-size: 1.3em;
  }

  #restaurant-container, #reviews-container {
    padding: 20px 35px 25px;
  }
}

/* Medium only */
@media screen and (min-width: 40em) and (max-width: 63.9375em) {

}

/* Large and up */
@media screen and (min-width: 64em) {

  #restaurants-list li {
    padding: 20px 45px;
  }

  #restaurants-list .restaurant-img {
    width: 30%;
    flex: 0 1 30%;
  }

  #restaurants-list .restaurant-info {
    padding: 10px 15px;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    align-self: stretch;
    justify-content: space-around;
  }
  #restaurants-list .restaurant-info h3,
  #restaurants-list .restaurant-info p {
    font-size: 1.4em;
  }
  #restaurants-list .restaurant-info a {
    font-size: 1.1em;
  }

  .restaurant-info h3{
    flex: 1 100%;
  }

  #restaurants-list .restaurant-info .location-info {
    flex: 4;
  }

  #restaurants-list .restaurant-info a {
    flex: 1;
  }

  .restaurant-info .location-info,
  .restaurant-info a {
    align-self: flex-start;
  }

/* ====================== Restaurant Details ====================== */
  .inside #maincontent {
    flex-flow: row wrap;
    justify-content: center;
  }

  .inside #restaurant-container {
    flex: 1;
    max-width: 400px;
  }

  .inside #reviews-container {
    flex: 2;
    max-width: 800px;
    position: relative;
    overflow-y: auto;
  }

  .inside #reviews-container ul {
    position: absolute;
  }

  #restaurant-container, #reviews-container {
    padding: 25px 15px 15px;
  }

}
/* Large only */
@media screen and (min-width: 64em) and (max-width: 74.9375em) {

}

